2007-02-11  Brecht Sanders <brecht@edustria.be>

	* libgda/gda-data-model-import.c: (gda_data_model_import_dispose),
	(gda_data_model_import_set_property): Check for the G_OS_WIN32 #define 
	instead of _WIN32. This is apparently more reliable/correct.

2007-02-10  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-dict-field.c:
	* libgda/gda-dict-field.h: gda_dict_field_get_attributes(): Correct the 
	enum return type.

2007-02-10  Armin Burgmeier  <armin@openismus.com>

	* libgda/gda-query.c: Replaced some explicit type checks to
	GDA_TYPE_QUERY_FIELD_FIELD and GDA_TYPE_QUERY_FIELD_ALL by
	GDA_IS_QUERY_FIELD_FIELD respectively GDA_IS_QUERY_FIELD_ALL to allow
	derived types to be a value provider for GdaQueryFieldField.

2007-02-09  Vivien Malerba <malerba@gnome-db.org>

	* configure.in:
	* libgda-3.0.pc.in: add -DGDA_DEBUG if necessary to allow easy creation of GdaObject
	derived objects outside the libgda's sources
	* configure.in:
	* tests/*: added unit tests for delimiters testing, to be run using
	the "make check" command (if the "check" library (http://check.sourceforge.net/) is 
	not installed then warnings will appear instead of a test failure
	count)
	* libgda/gda-parameter.c:
	* libgda/gda-object.[ch]: added the option for GdaObject sub-classes to copy the 
	"name" property to the "id" one if the "id" is not set (used by the GdaParameter object)
	* libgda/gda-parameter.c:
	* libgda/gda-parameter-list.c:
	* libgda/gda-data-model-iter.c: corrected the gda_object_dump() method
	* libgda/sql-delimiter/lexex.l: it is now legal to write "## /* type:gint */" when
	only "## /* type:'gint' */" was recognized before.
	* libgda/gda-data-model-query.c: correctly detect when it's not possible to get information
	about columns
	* libgda/gda-data-model.[ch]: added a "reset" signal emitted when the data model has completely
	changed (the number of columns and types of columns and of course the whole data may have changed)